--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "bufetrun",
+  "name": "mobilracing",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "eject": "expo eject",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "android:internal:build": "eas build -p android --profile preview --clear-cache",
+    "android:playstore:build": "eas build --platform android"
   },
   "dependencies": {
-    "expo": "~50.0.3",
-    "expo-status-bar": "~1.11.1",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.14",
+    "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3",
+    "expo-splash-screen": "~0.20.5",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
